--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--==================== HEADER ====================-->
     <header class="header scroll-header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">ASOUTHERNCAT</a>
+        <a href="#" class="nav__logo">Shibang Du</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
