--- a/index.html
+++ b/index.html
@@ -483,7 +483,49 @@
                   >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2022
+                    2024.09-
+                  </div>
+                </div>
+                 <!--==================== QUALIFICATION 2====================-->
+              <div class="qualification__data">
+                <div></div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <!-- <span class="qualification__line"></span> -->
+                </div>
+                <div>
+                  <h3 class="qualification__title" i18n="qualification4__title">
+                    Software Enginner
+                  </h3>
+                  <span
+                    class="qualification__subtitle"
+                    i18n="qualification4__subtitle"
+                    >ShenZhen</span
+                  >
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2021.09-
+                  </div>
+                </div>
+                 <!--==================== QUALIFICATION 3 ====================-->
+              <div class="qualification__data">
+                <div></div>
+                <div>
+                  <span class="qualification__rounder"></span>
+                  <!-- <span class="qualification__line"></span> -->
+                </div>
+                <div>
+                  <h3 class="qualification__title" i18n="qualification4__title">
+                    Software Enginner
+                  </h3>
+                  <span
+                    class="qualification__subtitle"
+                    i18n="qualification4__subtitle"
+                    >ShenZhen</span
+                  >
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2021.09-
                   </div>
                 </div>
               </div>
