--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                 <div></div>
                 <div>
                   <span class="qualification__rounder"></span>
-                  <!-- <span class="qualification__line"></span> -->
+                  <span class="qualification__line"></span>
                 </div>
                 <div>
                   <h3 class="qualification__title" i18n="qualification4__title">
@@ -491,7 +491,7 @@
                 <div></div>
                 <div>
                   <span class="qualification__rounder"></span>
-                  <!-- <span class="qualification__line"></span> -->
+                  <span class="qualification__line"></span>
                 </div>
                 <div>
                   <h3 class="qualification__title" i18n="qualification4__title">
@@ -512,7 +512,7 @@
                 <div></div>
                 <div>
                   <span class="qualification__rounder"></span>
-                  <!-- <span class="qualification__line"></span> -->
+                  <span class="qualification__line"></span>
                 </div>
                 <div>
                   <h3 class="qualification__title" i18n="qualification4__title">
@@ -525,7 +525,7 @@
                   >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2021.09-
+                    2021.09-2023.07
                   </div>
                 </div>
               </div>
