--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                   >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    ???.??.?? - ????.??.??
+                    ????.?? - ????.??
                   </div>
                 </div>
 
@@ -467,66 +467,69 @@
             <div class="qualification__content" data-content id="work">
               <!--==================== QUALIFICATION 1 ====================-->
               <div class="qualification__data">
-                <div></div>
+                <div>
+                  <h3 class="qualification__title" i18n="qualification1__title">
+                    Computer Enginner
+                  </h3>
+                  <span
+                    class="qualification__subtitle"
+                    i18n="qualification1__subtitle"
+                    >**** - University</span
+                  >
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    ????.?? - ????.??
+                  </div>
+                </div>
+
                 <div>
                   <span class="qualification__rounder"></span>
                   <span class="qualification__line"></span>
                 </div>
-                <div>
-                  <h3 class="qualification__title" i18n="qualification4__title">
-                    Software Enginner
-                  </h3>
-                  <span
-                    class="qualification__subtitle"
-                    i18n="qualification4__subtitle"
-                    >ShenZhen</span
-                  >
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2024.09-
-                  </div>
-                </div>
-                 <!--==================== QUALIFICATION 2====================-->
+              </div>
+              <!--==================== QUALIFICATION 2 ====================-->
               <div class="qualification__data">
                 <div></div>
                 <div>
                   <span class="qualification__rounder"></span>
                   <span class="qualification__line"></span>
                 </div>
+
                 <div>
-                  <h3 class="qualification__title" i18n="qualification4__title">
-                    Software Enginner
+                  <h3 class="qualification__title" i18n="qualification2__title">
+                    Web Design
                   </h3>
                   <span
                     class="qualification__subtitle"
-                    i18n="qualification4__subtitle"
-                    >ShenZhen</span
+                    i18n="qualification2__subtitle"
+                    >Self-Study</span
                   >
                   <div class="qualification__calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2021.09-
+                    2023.09 - 
                   </div>
                 </div>
-                 <!--==================== QUALIFICATION 3 ====================-->
+              </div>
+              <!--==================== QUALIFICATION 3 ====================-->
               <div class="qualification__data">
-                <div></div>
+                <div>
+                  <h3 class="qualification__title" i18n="qualification3__title">
+                    Web Development
+                  </h3>
+                  <span
+                    class="qualification__subtitle"
+                    i18n="qualification3__subtitle"
+                    >Self-Study</span
+                  >
+                  <div class="qualification__calendar">
+                    <i class="uil uil-calendar-alt"></i>
+                    2020.09 - 2023.07
+                  </div>
+                </div>
+
                 <div>
                   <span class="qualification__rounder"></span>
-                  <span class="qualification__line"></span>
-                </div>
-                <div>
-                  <h3 class="qualification__title" i18n="qualification4__title">
-                    Software Enginner
-                  </h3>
-                  <span
-                    class="qualification__subtitle"
-                    i18n="qualification4__subtitle"
-                    >ShenZhen</span
-                  >
-                  <div class="qualification__calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2021.09-2023.07
-                  </div>
+                  <!-- <span class="qualification__line"></span> -->
                 </div>
               </div>
             </div>
