--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
       <div class="footer__bg">
         <div class="footer__container container grid">
           <div>
-            <h1 class="footer__title">ASouthernCat</h1>
+            <h1 class="footer__title">Shibang Du</h1>
             <span class="footer__subtitle" i18n="home__subtitle"
               >Frontend developer</span
             >
